Some additional tests

--- a/test/test.org
+++ b/test/test.org
@@ -54,8 +54,11 @@ Things to do:
 |---+---+---|
 | D | E | F |
 
-| *A* Yes | /B/ No ~C~ |
-|---------+------------|
+| *A* Yes |           | /B/ No ~C~ |
+|---------+-----------+------------|
+|         |           |            |
+|---------+-----------+------------|
+|         | [[./img.png]] |            |
 
 * The End
 
