Proper paren rendering

--- a/org-mode/test/test.org
+++ b/org-mode/test/test.org
@@ -65,6 +65,10 @@ Things to do:
 |---------+-----------+------------|
 |         | [[./img.png]] |            |
 
+* Parens
+
+() (Stuff in parens.) (/Markup/).
+
 * The End
 
 Farewell.
