[org] Avoid inserting too many newlines in Section pretty-print
This fixes a testing issue with Property parsing roundtrips.

--- a/org-mode/test/test.org
+++ b/org-mode/test/test.org
@@ -38,6 +38,11 @@ Always keep some cash on hand, you never know.
 
 Stuff.
 
+** Props
+   :PROPERTIES:
+   :Yes: Fun
+   :END:
+
 * Another Heading!
 
 [[https://www.fosskers.ca/][Check out my website.]] It has a blog with ~code~ samples.
