[org] Fixed tag detection false-positive

--- a/org-mode/test/test.org
+++ b/org-mode/test/test.org
@@ -33,6 +33,8 @@ Always keep some cash on hand, you never know.
 - Albert Einstein
 #+end_quote
 
+** Not a tag! :)
+
 ** DONE Gotta do it
    CLOSED: [2021-04-28 Wed 15:10] DEADLINE: <2021-04-29 Thu> SCHEDULED: <2021-04-28 Wed>
    <2021-04-25 Sun>
